--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -30,9 +30,9 @@
                       </a>
                   </li>
                   <li class="nav-item">
-                      <a href="/about"
-                         class="nav-link{% ifequal page "about.html" %} active{%endifequal%}">
-                      about
+                      <a href="/item"
+                         class="nav-link{% ifequal page "form.html" %} active{%endifequal%}">
+                      add item
                       </a>
                   </li>
               </ul>
