--- a/resources/templates/form.html
+++ b/resources/templates/form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Add an item to inventory</h1>
-<form action="/add-item">
+<form action="/add-item" method="post">
     {% csrf-field %}
     <div class="form-group">
         <label for="item-name">Name</label>
