--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="row">
-  <div class="col-sm-12">
-    {{docs|markdown}}
-  </div>
+
+{% if flash %}
+<div class="alert alert-success">
+  {{flash}}
 </div>
+{% endif %}
+
+
 {% endblock %}
