--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -1,11 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
 
+<h1>Inventory</h1>
+
 {% if flash %}
 <div class="alert alert-success">
   {{flash}}
 </div>
 {% endif %}
+
+<table class="table">
+  <thead>
+    <th>Item</th>
+    <th>Serial Number</th>
+    <th>Value</th>
+  </thead>
+  <tbody>
+  {% for item in items%}
+  <tr>
+    <td>{{item.name}}</td>
+    <td>{{item.serial-number}}</td>
+    <td>{{item.value}}</td>
+  </tr>
+  {% endfor %}
+  </tbody>
+</table>
 
 
 {% endblock %}
