--- a/resources/templates/form.html
+++ b/resources/templates/form.html
@@ -1,20 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
+{% if name|empty? %}
 <h1>Add an item to inventory</h1>
-<form action="/add-item" method="post">
+{% else %}
+<h1>Edit an item</h1>
+{% endif %}
+
+<form action="{% if name|empty? %}/add-item{% else %}/edit-item/{{id}}{% endif %}" method="post">
     {% csrf-field %}
     <div class="form-group">
         <label for="item-name">Name</label>
-        <input type="text" class="form-control" id="item-name" name="name">
+        <input type="text" class="form-control" id="item-name" name="name" value="{{name}}">
     </div>
     <div class="form-group">
         <label for="item-serial-number">Serial Number</label>
-        <input type="text" class="form-control" id="item-serial-number" name="serial-number">
+        <input type="text" class="form-control" id="item-serial-number" name="serial-number" value="{{serial-number}}">
     </div>
     <div class="form-group">
         <label for="item-value">Value</label>
-        <input type="text" class="form-control" id="item-value" name="value">
+        <input type="text" class="form-control" id="item-value" name="value" value="{{value}}">
     </div>
-    <button class="btn btn-primary" type="submit">Add</button>
+    <button class="btn btn-primary" type="submit">Save</button>
 </form>
 {% endblock %}
