--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -14,6 +14,7 @@
     <th>Item</th>
     <th>Serial Number</th>
     <th>Value</th>
+    <th>Actions</th>
   </thead>
   <tbody>
   {% for item in items%}
@@ -21,6 +22,7 @@
     <td>{{item.name}}</td>
     <td>{{item.serial-number}}</td>
     <td>{{item.value}}</td>
+    <td><a href="/item/{{item.id}}">Edit</a></td>
   </tr>
   {% endfor %}
   </tbody>
